--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -687,15 +687,15 @@ jobs:
           $LATEST_RELEASE_INFO = `
             Invoke-RestMethod "https://api.github.com/repos/apache/arrow/releases/latest"
           # e.g. "apache-arrow-19.0.0"
-          $LATEST_TAG_NAME = $LATEST_RELEASE_INFO.tag_name
+          $LATEST_RELEASE_TAG = $LATEST_RELEASE_INFO.tag_name
           # "apache-arrow-19.0.0" -> "arrow-19.0.0"
-          $ARROW_VERSION = $LATEST_TAG_NAME -replace '^apache-', ''
+          $ARROW_VERSION = $LATEST_RELEASE_TAG -replace '^apache-', ''
           $DOWNLOAD_URL = `
-            "https://www.apache.org/dyn/closer.lua/arrow/${ARROW_VERSION}/${LATEST_TAG_NAME}.tar.gz?action=download"
-          Invoke-WebRequest -Uri $DOWNLOAD_URL -OutFile "${LATEST_TAG_NAME}.tar.gz"
+            "https://www.apache.org/dyn/closer.lua/arrow/${ARROW_VERSION}/${LATEST_RELEASE_TAG}.tar.gz?action=download"
+          Invoke-WebRequest -Uri $DOWNLOAD_URL -OutFile "${LATEST_RELEASE_TAG}.tar.gz"
           mkdir apache-arrow
-          tar -xzf "${LATEST_TAG_NAME}.tar.gz" --strip-components=1 -C apache-arrow
-          Remove-Item "${LATEST_TAG_NAME}.tar.gz"
+          tar -xzf "${LATEST_RELEASE_TAG}.tar.gz" --strip-components=1 -C apache-arrow
+          Remove-Item "${LATEST_RELEASE_TAG}.tar.gz"
       - name: Set version
         run: |
           "GRN_VERSION=${Env:GROONGA_VERSION}" | Set-Content version.sh
