--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -603,12 +603,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: actions/checkout@v4
-        with:
-          path: apache-arrow
-          ref: apache-arrow-18.0.0
-          repository: apache/arrow
-          submodules: recursive
       # Use CMake 3.27 not 3.26.
       # Workaround: https://github.com/actions/runner-images/issues/8598
       - name: Remove Strawberry Perl
@@ -688,6 +682,20 @@ jobs:
           Get-Command ccache
           (Get-Command ccache).Source
           ccache --show-stats --verbose --version
+      - name: Download Apache Arrow latest source archive
+        run: |
+          $LATEST_RELEASE_INFO = `
+            Invoke-RestMethod "https://api.github.com/repos/apache/arrow/releases/latest"
+          # e.g. "apache-arrow-19.0.0"
+          $LATEST_RELEASE_TAG = $LATEST_RELEASE_INFO.tag_name
+          # "apache-arrow-19.0.0" -> "arrow-19.0.0"
+          $ARROW_VERSION = $LATEST_RELEASE_TAG -replace '^apache-', ''
+          $DOWNLOAD_URL = `
+            "https://www.apache.org/dyn/closer.lua/arrow/${ARROW_VERSION}/${LATEST_RELEASE_TAG}.tar.gz?action=download"
+          Invoke-WebRequest -Uri $DOWNLOAD_URL -OutFile "${LATEST_RELEASE_TAG}.tar.gz"
+          New-Item -Path "apache-arrow" -ItemType Directory 
+          tar -xzf "${LATEST_RELEASE_TAG}.tar.gz" --strip-components=1 -C apache-arrow
+          Remove-Item "${LATEST_RELEASE_TAG}.tar.gz"
       - name: Set version
         run: |
           "GRN_VERSION=${Env:GROONGA_VERSION}" | Set-Content version.sh
