docs: add 15.0.0 entry

--- a/doc/files.am
+++ b/doc/files.am
@@ -1092,6 +1092,7 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/news/12.rst \
 	$(top_srcdir)/doc/source/news/13.md \
 	$(top_srcdir)/doc/source/news/14.md \
+	$(top_srcdir)/doc/source/news/15.md \
 	$(top_srcdir)/doc/source/news/2.rst \
 	$(top_srcdir)/doc/source/news/3.rst \
 	$(top_srcdir)/doc/source/news/4.rst \
@@ -2460,6 +2461,7 @@ source_files_relative_from_doc_dir = \
 	source/news/12.rst \
 	source/news/13.md \
 	source/news/14.md \
+	source/news/15.md \
 	source/news/2.rst \
 	source/news/3.rst \
 	source/news/4.rst \
@@ -2782,6 +2784,7 @@ po_files = \
 	news/12.po \
 	news/13.po \
 	news/14.po \
+	news/15.po \
 	news/2.po \
 	news/3.po \
 	news/4.po \
@@ -3101,6 +3104,7 @@ po_files_relative_from_locale_dir = \
 	LC_MESSAGES/news/12.po \
 	LC_MESSAGES/news/13.po \
 	LC_MESSAGES/news/14.po \
+	LC_MESSAGES/news/15.po \
 	LC_MESSAGES/news/2.po \
 	LC_MESSAGES/news/3.po \
 	LC_MESSAGES/news/4.po \
@@ -3420,6 +3424,7 @@ edit_po_files = \
 	news/12.edit \
 	news/13.edit \
 	news/14.edit \
+	news/15.edit \
 	news/2.edit \
 	news/3.edit \
 	news/4.edit \
@@ -3739,6 +3744,7 @@ edit_po_files_relative_from_locale_dir = \
 	LC_MESSAGES/news/12.edit \
 	LC_MESSAGES/news/13.edit \
 	LC_MESSAGES/news/14.edit \
+	LC_MESSAGES/news/15.edit \
 	LC_MESSAGES/news/2.edit \
 	LC_MESSAGES/news/3.edit \
 	LC_MESSAGES/news/4.edit \
@@ -4058,6 +4064,7 @@ mo_files = \
 	news/12.mo \
 	news/13.mo \
 	news/14.mo \
+	news/15.mo \
 	news/2.mo \
 	news/3.mo \
 	news/4.mo \
@@ -4377,6 +4384,7 @@ mo_files_relative_from_locale_dir = \
 	LC_MESSAGES/news/12.mo \
 	LC_MESSAGES/news/13.mo \
 	LC_MESSAGES/news/14.mo \
+	LC_MESSAGES/news/15.mo \
 	LC_MESSAGES/news/2.mo \
 	LC_MESSAGES/news/3.mo \
 	LC_MESSAGES/news/4.mo \
@@ -4730,6 +4738,7 @@ html_files_relative_from_locale_dir = \
 	html/news/12.html \
 	html/news/13.html \
 	html/news/14.html \
+	html/news/15.html \
 	html/news/2.html \
 	html/news/3.html \
 	html/news/4.html \
