--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Fri Feb 07 2025 Sutou Kouhei <kou@clear-code.com> - 15.0.0-1
+- New upstream release.
+
 * Wed Jan 29 2025 Abe Tomoaki <abe@clear-code.com> - 14.1.3-1
 - New upstream release.
 
