--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -61,20 +61,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
     ]
   end
 
-  def apt_prepare_debian_control_h3(control, target)
-    case target
-    when /\Aubuntu-focal/
-      enable_h3 = "#"
-    else
-      enable_h3 = ""
-    end
-    control.gsub(/@ENABLE_H3@/, enable_h3)
-  end
-
   def apt_prepare_debian_control(control_in, target)
-    control = control_in.dup
-    control = apt_prepare_debian_control_h3(control, target)
-    control
+    control_in
   end
 
   def yum_targets_default
