--- a/packages/debian/rules
+++ b/packages/debian/rules
@@ -20,11 +20,6 @@ override_dh_auto_configure:
 	else							\
 	  GRN_WITH_APACHE_ARROW=OFF;				\
 	fi;							\
-	if [ "$$(lsb_release -cs)" = "focal" ]; then		\
-	  GRN_WITH_SIMDJSON=no;                                 \
-	else                                                    \
-	  GRN_WITH_SIMDJSON=auto;                               \
-	fi;                                                     \
 	dh_auto_configure					\
 	  --buildsystem=cmake+ninja				\
 	  --							\
@@ -36,7 +31,7 @@ override_dh_auto_configure:
 	  -DGRN_WITH_EXAMPLES=ON				\
 	  -DGRN_WITH_MRUBY=ON					\
 	  -DGRN_WITH_MUNIN_PLUGINS=ON                           \
-	  -DGRN_WITH_SIMDJSON=$${GRN_WITH_SIMDJSON}
+	  -DGRN_WITH_SIMDJSON=auto
 
 # disable 'make check'.
 override_dh_auto_test:
