--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -463,6 +463,9 @@ exit 0
 %endif
 
 %changelog
+* Thu Feb 20 2025 Abe Tomoaki <abe@clear-code.com> - 15.0.1-1
+- New upstream release.
+
 * Fri Feb 07 2025 Sutou Kouhei <kou@clear-code.com> - 15.0.0-1
 - New upstream release.
 
