ci release: add support for publishing to Launchpad automatically

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,3 +74,21 @@ jobs:
             release-artifacts/*/*
         env:
           GH_TOKEN: ${{ github.token }}
+      - name: Prepare for Launchpad publishing
+        run: |
+          cp release-artifacts/release-source/groonga-*.tar.gz ./
+          sudo apt update
+          sudo apt install -y gpg
+      - uses: actions/checkout@v4
+        with:
+          path: apache-arrow
+          repository: apache/arrow
+      - name: Publish to Launchpad
+        env:
+          APACHE_ARROW_REPOSITORY: ${{ github.workspace }}/apache-arrow
+          LAUNCHPAD_DEPLOY_KEY: ${{ secrets.LAUNCHPAD_DEPLOY_KEY }}
+          LAUNCHPAD_UPLOADER_PGP_KEY: "0x32862FBCD63D72C152EFF3A9BD481CAA9168EA87"
+        run: |
+          echo "${LAUNCHPAD_DEPLOY_KEY}" | gpg --import
+          echo "trusted-key ${LAUNCHPAD_UPLOADER_PGP_KEY}" > ~/.gnupg/gpg.conf
+          rake -C packages ubuntu
