--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    environment: release
     steps:
       - uses: actions/checkout@v4
       - name: Download artifacts
