--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -575,6 +575,15 @@ macro(grn_prepare_fetchcontent)
   set(CMAKE_COMPILE_WARNING_AS_ERROR FALSE)
   set(CMAKE_EXPORT_NO_PACKAGE_REGISTRY TRUE)
   set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
+  if(NOT GRN_ALLOW_WARNING)
+    if(GRN_C_COMPILER_GNU_LIKE)
+      string(APPEND CMAKE_C_FLAGS " -Werror")
+      string(APPEND CMAKE_CXX_FLAGS " -Werror")
+    elseif(MSVC)
+      string(APPEND CMAKE_C_FLAGS " /WX")
+      string(APPEND CMAKE_CXX_FLAGS " /WX")
+    endif()
+  endif()
 endmacro()
 
 include(ExternalProject)
