cmake msvc llama-cpp: suppress warnings
macro redefinition:

    C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\ucrt\assert.h(21): warning C4005: 'static_assert': macro redefinition
    D:\a\groonga\groonga-build\_deps\llama_cpp-src\ggml\src\ggml-common.h(79): note: see previous definition of 'static_assert'

possible loss of data:

    C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.43.34808\include\type_traits(1706): warning C4244: 'argument': conversion from 'unsigned __int64' to 'int', possible loss of data
    C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.43.34808\include\type_traits(1706): note: the template instantiation context (the oldest one first) is
    D:\a\groonga\groonga-build\_deps\llama_cpp-src\src\llama-quant.cpp(114): note: see reference to function template instantiation 'std::thread &std::vector<std::thread,std::allocator<std::thread>>::emplace_back<llama_tensor_dequantize_impl::<lambda_cd9c328745c2783e344b7630b190ae6a>&,ggml_type&,uint8_t*,float*,size_t&>(llama_tensor_dequantize_impl::<lambda_cd9c328745c2783e344b7630b190ae6a> &,ggml_type &,uint8_t *&&,float *&&,size_t &)' being compiled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1566,6 +1566,16 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
         URL ${LLAMA_CPP_SOURCE_URL}
         URL_HASH "SHA256=${GRN_LLAMA_CPP_BUNDLED_SHA256}")
       grn_prepare_fetchcontent()
+      if(MSVC)
+        # 'identifier' : macro redefinition
+        # https://learn.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-1-c4005
+        string(APPEND CMAKE_C_FLAGS " /wd4005")
+        string(APPEND CMAKE_CXX_FLAGS " /wd4005")
+        # 'argument' : conversion from 'type1' to 'type2', possible loss of data
+        # https://docs.microsoft.com/en-us/cpp/error-messages/compiler-warnings/compiler-warning-level-2-c4244
+        string(APPEND CMAKE_C_FLAGS " /wd4244")
+        string(APPEND CMAKE_CXX_FLAGS " /wd4244")
+      endif()
       set(BUILD_SHARED_LIBS ON)
       set(BUILD_STATIC_LIBS OFF)
       set(GGML_BACKEND_DL ON)
